# smart-glasses

./: .gitignore  CLEANUP_SUMMARY.md  CMakeLists.txt  README.md  STRUCTURE.md  ultrasonic.py
.github/: copilot-instructions.md
agent/: CMakeLists.txt  button_agent.cpp  voice_agent.cpp
agent/include/agent/: agent.h  agent_loop.h  button_agent.h  openai_client.h  scene_builder.h  voice_agent.h
agent/src/: agent_loop.cpp  openai_client.cpp  scene_builder.cpp
app/: CMakeLists.txt  export_risk_model.cpp  extract_features.cpp  main.cpp  train_object_cnn.cpp
audio/: CMakeLists.txt  audio_capture.cpp  button_handler.cpp  vibrator.cpp
audio/include/audio/: alert_policy.h  audio.h  audio_capture.h  button_handler.h  haptics_engine.h  tts_engine.h  vibrator.h
audio/src/: alert_policy.cpp  haptics_engine.cpp  tts_engine.cpp
autograd/: CMakeLists.txt  example.cpp
autograd/include/autograd/: autograd.h  layers.h  no_grad.h  ops.h  optimizer.h  tensor.h
autograd/src/: layers.cpp  ops.cpp  optimizer.cpp  tensor.cpp
docs/: BUTTON_FEATURE_DELIVERY.md  BUTTON_FEATURE_INDEX.md  BUTTON_SETUP.md  GPIO_AUDIT.md  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README_BUTTON.md
perception/: CMakeLists.txt
perception/include/perception/: clusterer.h  occupancy_map.h  perception.h  tracker.h
perception/src/: clusterer.cpp  occupancy_map.cpp  tracker.cpp
prediction/: CMakeLists.txt
prediction/include/prediction/: prediction.h  risk_predictor.h  ttc_engine.h
prediction/src/: risk_predictor.cpp  ttc_engine.cpp
scripts/: end_to_end_system.sh  run_lidar.sh  test_button_gpio.sh  test_end_to_end.sh
sensors/: CMakeLists.txt  LiDAR.cpp  camera_classifier.cpp  camera_fallback.cpp  gpio.cpp  ld06.cpp  lidar_test.cpp  rplidar_a1.cpp  tfluna.cpp  ultrasonic_fallback.cpp  ultrasonic_hc_sr04.cpp
sensors/include/sensors/: camera_classifier.h  camera_fallback.h  gpio.h  ld06.h  lidar_base.h  rplidar_a1.h  sensors.h  serial_port.h  tfluna.h  ultrasonic_fallback.h  ultrasonic_hc_sr04.h
sim/: CMakeLists.txt
sim/include/sim/: sim.h  sim_lidar.h  sim_world.h
sim/src/: sim_lidar.cpp  sim_world.cpp
